2006-04-21  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Set dirty flag to force redrawing
	when changing tree style
	* src/plugins/TestcaseGenerator.py: Update to new GrampsTypes
	
2006-04-21  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditRepository.py: fix warnbox call
	* src/Editors/_EditPlace.py: fix warnbox call
	* src/Editors/_EditRepoRef.py: Add backreference tab

2006-04-21  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ConstXML.py: Remove.
	* src/RelLib/_GrampsType.py (set_from_xml_str): Remove extra def.
	* src/PluginUtils/_PluginStatus.py: Many small fixes.
	* src/ManagedWindow.py (GrampsWindowManager.display_menu_list):
	Fix building the menu for child-less windows.

2006-04-21  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: AttributeType changes
	* src/GrampsDb/_ReadGedcom.py: AttributeType changes
	* src/GrampsDb/_ReadXML.py: AttributeType changes
	* src/GrampsDb/_ConstXML.py: AttributeType changes
	* src/GrampsDb/_WriteXML.py: AttributeType changes
	* src/GrampsDb/_GrampsBSDDB.py: AttributeType changes
	* src/RelLib/__init__.py: AttributeType changes
	* src/RelLib/_AttributeType.py: AttributeType changes
	* src/RelLib/_Attribute.py: AttributeType changes
	* src/RelLib/Makefile.am: AttributeType changes
	* src/Editors/_EditAttribute.py: AttributeType changes
	* src/Utils.py: AttributeType changes
	* src/ViewManager.py: start of cleaned up plugin manager
	* src/Errors.py: warning error for unavailable plugin
	* src/PluginUtils/__init__.py: start of cleaned up plugin manager
	* src/PluginUtils/_Plugins.py: start of cleaned up plugin manager
	* src/PluginUtils/_PluginMgr.py: start of cleaned up plugin manager
	* src/docgen/PdfDoc.py: Issue unavailable error on reportlab failure
	* src/docgen/LPRDoc.py: Issue unavailable error on gnomeprint failure

2006-04-20  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_EventView.py: pychecker fixes